--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -16,12 +16,12 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on. "ubuntu-latest" is a good default.
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Step 1: Checks out your repository's code under the $GITHUB_WORKSPACE directory
+      # Step 1: Checks out your repository's code
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -31,14 +31,15 @@ jobs:
         with:
           python-version: "3.10"
 
-      # Step 3: Installs the script's dependencies
-      # It first upgrades pip and then installs requests, colorama, and flake8 for linting.
+      # Step 3: Installs dependencies from requirements.txt
+      # This is now the standard way to handle Python dependencies.
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests colorama flake8
+          pip install -r requirements.txt
+          pip install flake8  # We still install flake8 for linting
 
-      # Step 4: Lints the code with flake8 to check for style issues and potential errors
+      # Step 4: Lints the code with flake8 to check for style issues
       - name: Lint with flake8
         run: |
           # Stop the build if there are Python syntax errors or undefined names
@@ -47,6 +48,5 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       # Step 5: Runs a basic test by executing the script with the --help argument
-      # This confirms that the script starts up without any immediate errors.
       - name: Run basic test
         run: python graphqlnomad.py --help
