--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,19 @@ Thumbs.db
 .env
 .env.*
 *.env
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Dependency directories
+node_modules/
+
+# Optional lock files
+# For this project, the lock file is not needed as we have no JS dependencies.
+package-lock.json
+
+# Optional npm cache directory
+.npm/
