--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,5 +1,5 @@
 # Name for your GitHub Actions workflow
-name: GraphQLNomad CI/CD
+name: GraphQLNomad CI
 
 # Controls when the action will run.
 on:
@@ -31,13 +31,13 @@ jobs:
         with:
           python-version: "3.10"
 
-      # Step 3: Installs dependencies from requirements.txt
-      # This is now the standard way to handle Python dependencies.
+      # Step 3: Installs dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install flake8  # We still install flake8 for linting
+          pip install flake8
+          # Install the project itself in editable mode, along with its dependencies
+          pip install -e .
 
       # Step 4: Lints the code with flake8 to check for style issues
       - name: Lint with flake8
@@ -47,6 +47,11 @@ jobs:
           # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      # Step 5: Runs a basic test by executing the script with the --help argument
+      # Step 5: Runs a basic test by executing the installed package as a module
+      # THIS IS THE CORRECTED STEP
       - name: Run basic test
-        run: python graphqlnomad.py --help
+        run: python -m graphqlnomad --help
+
+      # Step 6: Test the installed command-line entry point
+      - name: Test command-line entry point
+        run: graphqlnomad --version
